Kubernetes/service/loadbalancer.yaml
kind: Service
apiVersion: v1
metadata:
  name:  awslb
spec:
  selector:
    name: myPod
  type:  LoadBalancer
  ports:
    - port:  8080
      targetPort: 80
