Kubernetes/service/mysrvc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2022-03-07T20:05:25Z"
  name: websrvc
  namespace: default
  resourceVersion: "6213"
  uid: 7782a1e5-1bd0-4a2f-b830-dae475c248be
spec:
  clusterIP: 10.110.132.243
  clusterIPs:
  - 10.110.132.243
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    server: web
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
